--- a/mediapicker/src/main/AndroidManifest.xml
+++ b/mediapicker/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         tools:targetApi="34" >
 
         <activity
-            android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
+            android:name=".cropper.CropImageActivity"
             android:screenOrientation="portrait"
             android:configChanges="orientation|screenSize"
             android:theme="@style/Base.Theme.AppCompat" />
