--- a/mediapicker/src/main/AndroidManifest.xml
+++ b/mediapicker/src/main/AndroidManifest.xml
@@ -10,14 +10,10 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
-        android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:allowBackup="false"
+        tools:replace="android:allowBackup"
+        tools:ignore="DataExtractionRules"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MediaPicker"
         tools:targetApi="34" >
 
         <activity
