--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         tools:targetApi="34" >
 
         <activity
-            android:name="com.nishith.mediaselectorapp.MainActivity"
+            android:name="com.nishith.photopickerDemoApp.MainActivity"
             android:screenOrientation="portrait"
             android:configChanges="orientation|screenSize"
             android:exported="true">
